# otelpy

./: mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: index.md
otelpy/: main.py  traces.py
